--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,18 @@
 
 :root {
   line-height: 1.5;
-  font-size: 16px;
+  font-size: 18px;
 
-  --prim-color: #3366ff;
+  --cl-primary: #1B3264;
+  /* --cl-primary-light: #5263a0; */
+
+  --cl-secondary: #FFB902;
+  /* --cl-secondary-light: #fe8f75; */
+  
+  --cl-third: #FD4344;
+
   --bg-dark: #021a31;
-  --bg-gradient: linear-gradient(30deg, rgb(43, 93, 233), #cc00ff);
+  /* --bg-gradient: linear-gradient(30deg, rgb(43, 93, 233), #cc00ff); */
 }
 
 /* :root {
@@ -46,6 +53,7 @@
   box-sizing: border-box !important;
   font-family: "work-sans";
   font-weight: 400;
+  /* color: var(--cl-primary) !important; */
 }
 html,
 body {
@@ -56,4 +64,20 @@ body {
 input :focus {
   outline: none !important;
   box-shadow: none !important;
+}
+
+.active{
+  position: relative;
+  transform: translateX(-0.6rem);
+  margin-bottom: 1rem;
+  scale: 0.5;
+}
+.active::before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 0.1rem;
+  bottom: -0.1rem;
+  border-radius: 10px;
+  background-color: var(--cl-secondary);
 }
