--- a/src/index.css
+++ b/src/index.css
@@ -71,12 +71,13 @@ body {
   background-color: var(--cl-primary) !important;
 }
 .bg-secondary{
-  background-color: var(--cl-secondary);
+  background-color: var(--cl-secondary) !important;
 }
 
-input :focus {
+input:focus {
   outline: none !important;
   box-shadow: none !important;
+  border: 1px solid var(--cl-secondary) !important;
 }
 
 .active{
