--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
   font-size: 18px;
 
   --cl-primary: #1B3264;
-  /* --cl-primary-light: #5263a0; */
+  --cl-primary-light: #1b32647d;
 
   --cl-secondary: #FFB902;
   /* --cl-secondary-light: #fe8f75; */
