--- a/src/components/Shop/style.module.css
+++ b/src/components/Shop/style.module.css
@@ -20,9 +20,17 @@
         grid-template-columns: repeat(4, 1fr);
     }
 }
+.product_card{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
 .product_img{
     width: 100%;
 }
+
+.icons{
+    color: var(--cl-secondary);
+}
+
 /* ============================== Filter ============================== */
 .filer_bar{
     width: 260px;
